﻿Subtitle Edit Changelog

3.5.1 (xth December 2016) BETA
* NEW:
   * "mpv" media player now works on Linux  - thx var1ap 
* IMPROVED:
   * Updated Hungarian translation - thx ZityiSoft Team
   * Updated Russian translation - thx Elheym
   * Updated Romanian translation - thx Mircea
   * Updated Finnish translation - thx Teijo
   * Updated French Translation - thx JM GBT
   * Language auto-detect now includes Latvian and Lithuanian - thx rhazor
* FIXED:
   * Fixed possible crash when generating scene changes - thx Leemet
   * Fixed issues with moving rules in "Multiple replace" - thx kristiaanvk
   * Fixed list view issues regarding remember selected position - thx darnn
   * EBU stl saves empty file if saving is cancelled - thx ivandrofly/jjtronics
   * Fixed possible crash in textbox with italic - thx ivandrofly
   * Fixed bug in file naming after extracting sub from mkv - thx mzso
   * Fixed bottom margin in image export of SSA/ASS - thx maddox
   * "Find" always try to find the next occurrence - thx Boulder08
   * Fixed "Remove text for HI" issue reagarding colons - thx Boulder08
   * Fix "Fix missing spaces" issue regarding Finnish/Swedish colons - thx Boulder08
   * Fix two issues with "Fix common errors" - thx Tronar
   * OCR fix rules: fix for weird Unicode comma (#x201A) - thx djc


3.5 (26th October 2016)
* NEW:
   * Can now generate scene changes via FFmpeg + other scene changes improvements
   * New shortcuts
   * Added "Netflix Timed Text" - thx Piotr
   * Added format "MediaTransData" - thx Alice
   * Added new subtitle format - thx emmanuel
   * Added even more formats - thx ivandrofly + others
   * Auto detection of Czech and Slovak languages - thx mm6502
* IMPROVED:
   * Updated Korean translation - thx domddol
   * Updated Portuguese translation - thx moob
   * Updated Hungarian translation - thx Zityi
   * Updated Polish translation - thx Admas
   * Updated Catalan translation - thx Juansa